fix #887: add id to plugin.xml for DCDServerStatusBarWidgetFactory